--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   </script>
 </head>
 <body>
-  <!-- Your modern UI HTML structure goes here -->
-</body>
+    <div class="container">
+        <h1>Login Page</h1>
+        <input type="text" id="username" placeholder="Username">
+        <input type="password" id="password" placeholder="Password">
+        <button onclick="login()">Login</button>
+        <div id="content"></div></body>
 </html>
