--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       xhr.onload = function() {
         if (xhr.status === 200) {
           var response = xhr.responseText;
-          if (response === "success") {
+          if (response.trim().toLowerCase() === "success") {
             // Correct login, load page content
             document.getElementById("content").innerHTML = "<h1>Hello World!</h1>";
           } else {
